# Modern-HVAC-Control-System-Multi-Zone-Intelligent-Controller

./: README.md  architecture.md  ci.yml  fsm_controller.py  heat pump.py  humidity_model.py  main simulator engine.py  mpc_controller.py  pid_controller.py  pyproject.toml  release.yml  simulation.yml  test thermal.py  thermal zone rc network model.py  weekly_sim.yml
